Fix groups table styling

--- a/include_groupnavigation.html
+++ b/include_groupnavigation.html
@@ -20,7 +20,7 @@ table {
     width: 100%;
 }
 
-th, td {
+.row-content th, .row-content td {
     text-align: left;
     padding: 10px;
      border: solid 1px lightgrey;
