Add fighting fair

--- a/commonconcerns.html
+++ b/commonconcerns.html
@@ -145,10 +145,14 @@
 	    	<a class="btn-info-desktop btn-block custom" href="vav/vav_stalking.html">&nbsp;&nbsp;&nbsp;Stalking</a>
 	    	</div>
 	    	</div>
-	    	
 	    	<div class="row row-nested-space hidden-xs">
 	    	<div class="col-xs-12-desktop hidden-xs">
 	    	<a class="btn-info-desktop btn-block custom" href="gambling.html">&nbsp;&nbsp;&nbsp;Gambling</a>
+	    	</div>
+	    	</div>
+			<div class="row row-nested-space hidden-xs">
+	    	<div class="col-xs-12-desktop hidden-xs">
+	    	<a class="btn-info-desktop btn-block custom" href="fightingfair.html">&nbsp;&nbsp;&nbsp;Fighting fair to resolve conflict</a>
 	    	</div>
 	    	</div>
 	    	
