Add number links

--- a/studentindistress.html
+++ b/studentindistress.html
@@ -124,12 +124,12 @@ student's stress level may be a cause for concern. In these circumstances, you m
 <H2 class="H2">How You Can Help Students in Distress</H2>
 <P><span class="bodytext"><B>What To Do When You Suspect a Serious Crisis</B><BR>
 If you believe there may be imminent danger of harm to a student or someone else, as evidenced by several of the crisis
-symptoms listed under the Student in Crisis Section, immediately call the UT Police (471-4441) or the Austin Police
+symptoms listed under the Student in Crisis Section, immediately call the UT Police (<a href="tel:471-4441">471-4441</a>) or the Austin Police
 Department (911) for assistance. You may also consider walking the student to the Counseling and Mental Health Center
 (CMHC). Doing so is an excellent way of showing your concern and support, and helps ensure that the student receives the
 help they need. CMHC is open Monday through Friday, from 8am to 5pm.
 
-<P><span class="bodytext">If you are concerned about a student but unsure how to approach the situation, call the Behavior Concerns Advice Line at 512-232-5050 for a confidential consultation. This service is available 24 hours a day, 7
+<P><span class="bodytext">If you are concerned about a student but unsure how to approach the situation, call the Behavior Concerns Advice Line at <a href="tel:512-232-5050">512-232-5050</a> for a confidential consultation. This service is available 24 hours a day, 7
 days a week.
 
 <DIR></span><div id="link_link"><A HREF="http://www.utexas.edu/safety/bcal/" target="blank">Behavior Concerns Advice Line</A></DIV></P></DIR>
@@ -153,9 +153,9 @@ Assistance Program
 
 
 
-<P><span class="bodytext">If you're interested in counseling options for yourself or a UT colleague, please contact the Employee Assistance Program at 512-471-3366.
+<P><span class="bodytext">If you're interested in counseling options for yourself or a UT colleague, please contact the Employee Assistance Program at <a href="tel:512-471-3366">512-471-3366</a>.
 <DIR></span><div id="link_link"><A HREF="http://www.utexas.edu/hr/eap" target="blank"  class="a_class_hlink">Employee Assistance Program</A></DIV></P></DIR>
-			<P><span class="bodytext">If you have concerns about a student, faculty, or staff member in the UT community, contact the 24-hour Behavior Concerns Advice Line at 512-232-5050.
+			<P><span class="bodytext">If you have concerns about a student, faculty, or staff member in the UT community, contact the 24-hour Behavior Concerns Advice Line at <a href="tel:512-232-5050">512-232-5050</a>.
 <DIR></span><div id="link_link"><A HREF="http://www.utexas.edu/safety/bcal/" target="blank"  class="a_class_hlink">Behavior Concerns Advice Line</A></DIV></P></DIR>
 
 
