--- a/survivingbreakup.html
+++ b/survivingbreakup.html
@@ -70,10 +70,9 @@
 
         <H1 class="H1">Surviving a Breakup</H1>
 
-        <H5 class="H5">The University of Texas at Austin <BR>Counseling and Mental Health Center
-            <BR><a href="http://facilitiesservices.utexas.edu/buildings/UTM/0980" class="a_class_hlink">SSB 5th Floor</A>
-            <BR>Hours: Monday - Friday, 8:00 a.m. - 5:00 p.m.
-            <BR><a href="tel:1-512-471-3515" title="Phone" class="a_class_phonesm">512-471-3515</a><BR></H5>
+    <span class="bodytext"><B>Business Hours:</B><BR>Monday thru Friday, 8:00am - 5:00pm<BR>Appointment-Scheduling hours are Monday through Friday, 8:00am-12:00pm & 1:00pm-4:00pm
+<BR><span class="bodytext"><B>Phone:</B><a href="tel:1-512-471-3515" title="Phone" class="a_class_phonesm"> (512) 471-3515</A> -  <a href="http://facilitiesservices.utexas.edu/buildings/UTM/0980" class="a_class_tlink">Student Services Building</A> 5th Floor</span>
+<BR><img src="images/universal/naviconlinevav.png" alt="graphic element used to separate content" width="280" height="1" vspace="5" border="0" />
 
         <H2 class="H2">Topics</H2>
         <A HREF="#care" class="a_class_hlink">Taking care of yourself</A><BR>
@@ -126,8 +125,8 @@
 <H2 class="H2">What can I do? </H2>
 
 <ul><span class="bodytext">
-	<li>To schedule a confidential individual appointment with a counselor, contact CMHC: 512-471-3515 </li>
-	<li>To speak with a counselor by phone, call CMHC Crisis Line: 512-471-2255 (available 24 hours/day, 7 days/week)</li>
+	<li>To schedule a confidential individual appointment with a counselor, contact CMHC: <a href="tel:512-471-3515">512-471-3515</a></li>
+	<li>To speak with a counselor by phone, call CMHC Crisis Line: <a href="tel:512-471-2255">512-471-2255</a> (available 24 hours/day, 7 days/week)</li>
 	<li>To see the list of groups being offered this semester, go to: <a href="http://www.cmhc.utexas.edu/groups.html" class="a_class_tlink" target="blank">Groups</A></li>
 </ul>
 
