Add groups keywords

--- a/groups_fall16/g_PE_25.html
+++ b/groups_fall16/g_PE_25.html
@@ -9,7 +9,7 @@
 
 
     <TITLE>CMHC GROUPS - Personal Exploration 25+</TITLE>
-    <META name="KeyWords" content="Counseling and Mental Health Center, University of Texas, Austin, health, SSB, University Health Services,">
+    <META name="KeyWords" content="Counseling and Mental Health Center, University of Texas, Austin, health, SSB, University Health Services, personal exploration">
 
 
     <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge chrome=1">
