--- a/groups_fall16/g_lesbiansupport.html
+++ b/groups_fall16/g_lesbiansupport.html
@@ -9,7 +9,7 @@
 
 
     <TITLE>CMHC GROUPS - Lesbian, Bisexual and Queer Women's Support Group</TITLE>
-    <META name="KeyWords" content="Lesbian, Bisexual and Queer Women's Support Group, Counseling and Mental Health Center, University of Texas, Austin, health, SSB, University Health Services,">
+    <META name="KeyWords" content="Lesbian, Bisexual and Queer Women's Support Group, Counseling and Mental Health Center, University of Texas, Austin, health, SSB, University Health Services, lesbian, support">
 
 
     <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge chrome=1">
