--- a/groups_fall16/c_mindfulnessmeditation.html
+++ b/groups_fall16/c_mindfulnessmeditation.html
@@ -9,7 +9,7 @@
 
 
     <TITLE>Mindfulness Meditation Group</TITLE>
-    <META name="KeyWords" content="Mindfulness Meditation Group, Counseling and Mental Health Center, University of Texas, Austin, health, SSB, University Health Services,">
+    <META name="KeyWords" content="Mindfulness Meditation Group, Counseling and Mental Health Center, University of Texas, Austin, health, SSB, University Health Services, meditation, mindful meditation">
 
 
     <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge chrome=1">
