--- a/groups_fall16/g_dissertationsupport.html
+++ b/groups_fall16/g_dissertationsupport.html
@@ -9,7 +9,7 @@
 
 
     <TITLE>CMHC Group - Dissertation Support Group</TITLE>
-    <META name="KeyWords" content="CMHC Group - Gay/Bisexual Men's Group, Counseling Groups, Counseling and Mental Health Center, University of Texas, Austin, health, SSB, University Health Services,">
+    <META name="KeyWords" content="CMHC Group - Gay/Bisexual Men's Group, Counseling Groups, Counseling and Mental Health Center, University of Texas, Austin, health, SSB, University Health Services, help, dissertation, procrastination">
 
     <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0">
