--- a/groups_fall16/g_meditation_lunch.html
+++ b/groups_fall16/g_meditation_lunch.html
@@ -9,7 +9,7 @@
 
 
     <TITLE>CMHC GROUPS</TITLE>
-    <META name="KeyWords" content="Counseling and Mental Health Center, University of Texas, Austin, health, SSB, University Health Services,">
+    <META name="KeyWords" content="Counseling and Mental Health Center, University of Texas, Austin, health, SSB, University Health Services, meditation, mindful meditation">
 
 
 
