--- a/groups_fall16/g_ttime.html
+++ b/groups_fall16/g_ttime.html
@@ -9,7 +9,7 @@
 
 
     <TITLE>CMHC GROUPS - T-Time: A Supportive Space for Trans Students</TITLE>
-    <META name="KeyWords" content=" A Supportive Space for Trans Students, Counseling and Mental Health Center, University of Texas, Austin, health, SSB, University Health Services,">
+    <META name="KeyWords" content=" A Supportive Space for Trans Students, Counseling and Mental Health Center, University of Texas, Austin, health, SSB, University Health Services, transgender, safe space, support">
 
 
     <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge chrome=1">
