--- a/mbl_audio3.html
+++ b/mbl_audio3.html
@@ -74,9 +74,9 @@
  <center></BR><span class="cap">CRUISE</span></BR> </BR>
   
 <audio controls autoplay controls="controls">
-  <source src="mindbodylabpage/files/8 Cruise Imagery.mp3" type="audio/mpeg" autostart="true" loop="false" bgcolor="#263b51">
-  <source src="mindbodylabpage/files/8 Cruise Imagery.ogg" type="audio/ogg" autostart="true" loop="false" bgcolor="#263b51">
-  <embed height="50" width="100" src="mindbodylabpage/files/8 Cruise Imagery.mp3"autostart="true" loop="false" bgcolor="#263b51">
+  <source src="mindbodylhttps://cmhc.utexas.edu/mindbodylabpage/files/8 Cruise Imagery.mp3" type="audio/mpeg" autostart="true" loop="false" bgcolor="#263b51">
+  <source src="mindbodylhttps://cmhc.utexas.edu/mindbodylabpage/files/8 Cruise Imagery.ogg" type="audio/ogg" autostart="true" loop="false" bgcolor="#263b51">
+  <embed height="50" width="100" src="mindbodylhttps://cmhc.utexas.edu/mindbodylabpage/files/8 Cruise Imagery.mp3"autostart="true" loop="false" bgcolor="#263b51">
 </audio></BR>
 
 
