--- a/mbl_audio5.html
+++ b/mbl_audio5.html
@@ -74,9 +74,9 @@
 	  	    
  <center></BR><span class="cap">3 MINUTE BREATHING</span></BR></BR>   
 <audio controls autoplay controls="controls">
-  <source src="mindbodylabpage/files/1 3 Minute Breathing Space.mp3" type="audio/mpeg" autostart="true" loop="false" bgcolor="#263b51">
-  <source src="mindbodylabpage/files/1 3 Minute Breathing Space.ogg" type="audio/ogg" autostart="true" loop="false" bgcolor="#263b51">
-  <embed height="50" width="100" src="mindbodylabpage/files/1 3 Minute Breathing Space.mp3"autostart="true" loop="false" bgcolor="#263b51">
+  <source src="https://cmhc.utexas.edu/mindbodylabpage/files/1 3 Minute Breathing Space.mp3" type="audio/mpeg" autostart="true" loop="false" bgcolor="#263b51">
+  <source src="https://cmhc.utexas.edu/mindbodylabpage/files/1 3 Minute Breathing Space.ogg" type="audio/ogg" autostart="true" loop="false" bgcolor="#263b51">
+  <embed height="50" width="100" src="https://cmhc.utexas.edu/mindbodylabpage/files/1 3 Minute Breathing Space.mp3"autostart="true" loop="false" bgcolor="#263b51">
 </audio></BR>
 
 
