--- a/mbl_audio6.html
+++ b/mbl_audio6.html
@@ -73,9 +73,9 @@
 	  	    
  <center></BR> <span class="cap">4-7-8 BREATH</span></BR></BR>  
 <audio controls autoplay controls="controls">
-  <source src="mindbodylabpage/files/9 4-7-8 Breath.mp3" type="audio/mpeg" autostart="true" loop="false" bgcolor="#263b51">
-  <source src="mindbodylabpage/files/9 4-7-8 Breath.ogg" type="audio/ogg" autostart="true" loop="false" bgcolor="#263b51">
-  <embed height="50" width="100" src="mindbodylabpage/files/9 4-7-8 Breath.mp3"autostart="true" loop="false" bgcolor="#263b51">
+  <source src="https://cmhc.utexas.edu/mindbodylabpage/files/9 4-7-8 Breath.mp3" type="audio/mpeg" autostart="true" loop="false" bgcolor="#263b51">
+  <source src="https://cmhc.utexas.edu/mindbodylabpage/files/9 4-7-8 Breath.ogg" type="audio/ogg" autostart="true" loop="false" bgcolor="#263b51">
+  <embed height="50" width="100" src="https://cmhc.utexas.edu/mindbodylabpage/files/9 4-7-8 Breath.mp3"autostart="true" loop="false" bgcolor="#263b51">
 </audio></BR>
 
 
