--- a/mbl_audio2.html
+++ b/mbl_audio2.html
@@ -75,9 +75,9 @@
   	    
  <center></BR><span class="cap">MUSCLE RELAXATION</span></BR></BR>   
 <audio controls autoplay controls="controls">
-  <source src="mindbodylabpage/files/Muscle Relaxation.mp3" type="audio/mpeg" autostart="true" loop="false" bgcolor="#263b51">
-  <source src="mindbodylabpage/files/Muscle Relaxation.ogg" type="audio/ogg" autostart="true" loop="false" bgcolor="#263b51">
-  <embed height="50" width="100" src="mindbodylabpage/files/Muscle Relaxation.mp3"autostart="true" loop="false" bgcolor="#263b51">
+  <source src="https://cmhc.utexas.edu/mindbodylabpage/files/Muscle Relaxation.mp3" type="audio/mpeg" autostart="true" loop="false" bgcolor="#263b51">
+  <source src="https://cmhc.utexas.edu/mindbodylabpage/files/Muscle Relaxation.ogg" type="audio/ogg" autostart="true" loop="false" bgcolor="#263b51">
+  <embed height="50" width="100" src="https://cmhc.utexas.edu/mindbodylabpage/files/Muscle Relaxation.mp3"autostart="true" loop="false" bgcolor="#263b51">
 </audio></BR>
 
 <div class="col-xs-12 hidden-xs">
