--- a/mbl_audio7.html
+++ b/mbl_audio7.html
@@ -74,9 +74,9 @@
 	  	    
  <center></BR><span class="cap">PROGRESSIVE MUSCLE RELAXATION</span></BR></BR>   
 <audio controls autoplay controls="controls">
-  <source src="mindbodylabpage/files/3 Progressive Muscle Relaxation.mp3" type="audio/mpeg" autostart="true" loop="false" bgcolor="#263b51">
-  <source src="mindbodylabpage/files/3 Progressive Muscle Relaxation.ogg" type="audio/ogg" autostart="true" loop="false" bgcolor="#263b51">
-  <embed height="50" width="100" src="mindbodylabpage/files/3 Progressive Muscle Relaxation.mp3"autostart="true" loop="false" bgcolor="#263b51">
+  <source src="https://cmhc.utexas.edu/mindbodylabpage/files/3 Progressive Muscle Relaxation.mp3" type="audio/mpeg" autostart="true" loop="false" bgcolor="#263b51">
+  <source src="https://cmhc.utexas.edu/mindbodylabpage/files/3 Progressive Muscle Relaxation.ogg" type="audio/ogg" autostart="true" loop="false" bgcolor="#263b51">
+  <embed height="50" width="100" src="https://cmhc.utexas.edu/mindbodylabpage/files/3 Progressive Muscle Relaxation.mp3"autostart="true" loop="false" bgcolor="#263b51">
 </audio></BR>
 
 
