Style social icons on hover

--- a/index.html
+++ b/index.html
@@ -354,10 +354,10 @@
 			</span>
 
 			<br/><br/>
-			<div class="col-sm-3 col-xs-3"><a href="https://www.facebook.com/utcmhc"><img src="images/universal/icon_facebook.png" alt="facebook" hspace="0" vspace="0"class="img-responsive" /></a></div>
-			<div class="col-sm-3 col-xs-3"><a href="https://twitter.com/UT_CMHC"><img src="images/universal/icon_twitter.png" alt="facebook" hspace="0" vspace="0" class="img-responsive"/></a></div>
-			<div class="col-sm-3 col-xs-3"><a href="https://www.instagram.com/UTaustinVAV/"><img src="images/universal/icon_instagram.png" alt="facebook" hspace="0" vspace="0"class="img-responsive" /></a></div>
-			<div class="col-sm-3 col-xs-3"><a href="https://www.youtube.com/user/TheCMHC"><img src="images/universal/icon_youtube.png" alt="facebook" hspace="0" vspace="0"class="img-responsive" /></a></div>
+			<div class="col-sm-3 col-xs-3"><a href="https://www.facebook.com/utcmhc"><img src="images/universal/icon_facebook.png" onmouseover="this.src='images/universal/icon_facebook_color.png';" onmouseout="this.src='images/universal/icon_facebook.png';" alt="facebook" hspace="0" vspace="0"class="img-responsive" /></a></div>
+			<div class="col-sm-3 col-xs-3"><a href="https://twitter.com/UT_CMHC"><img src="images/universal/icon_twitter.png" onmouseover="this.src='images/universal/icon_twitter_color.png';" onmouseout="this.src='images/universal/icon_twitter.png';" alt="twitter" hspace="0" vspace="0" class="img-responsive"/></a></div>
+			<div class="col-sm-3 col-xs-3"><a href="https://www.instagram.com/UTaustinVAV/"><img src="images/universal/icon_instagram.png" onmouseover="this.src='images/universal/icon_instagram_color.png';" onmouseout="this.src='images/universal/icon_instagram.png';" alt="instagram" hspace="0" vspace="0"class="img-responsive" /></a></div>
+			<div class="col-sm-3 col-xs-3"><a href="https://www.youtube.com/user/TheCMHC"><img src="images/universal/icon_youtube.png" onmouseover="this.src='images/universal/icon_youtube_color.png';" onmouseout="this.src='images/universal/icon_youtube.png';" alt="youtube" hspace="0" vspace="0"class="img-responsive" /></a></div>
 			<br/>
 		</div>
 	</div>
