Fix padding for VAV

--- a/vav/index.html
+++ b/vav/index.html
@@ -211,7 +211,7 @@
 							<!-- __________________________________________________________________________   boxed navigation mobile  __________________________________________________________________________  -->
 
 
-							<div class="col-xs-12 hidden-md hidden-lg hidden-sm">
+							<div class="col-xs-12 hidden-md hidden-lg hidden-sm" style="padding:0">
 
 
 
