Fix image linking issue

--- a/include_universalheader.html
+++ b/include_universalheader.html
@@ -66,16 +66,16 @@
 			<center><span class="homepageheader hidden-xs">&nbsp;We'll help you figure it out.</span></center>
 			<div class="row hidden-md">
 			</div>
-			<div class="col-sm-5 hidden-xs" onmouseover="$(this).find('img').attr('src','images/universal/icon_phone_color.png')" onmouseout="$(this).find('img').attr('src','images/universal/icon_phone.png')">
-				<div class="col-sm-3 hidden-xs"><a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/contactcmhc.html"><img src="images/universal/icon_phone.png"  class="img-responsive" alt="contact cmhc - 512-471-3515 monday thru friday 8am-5pm" vspace="30" /></a></div>
+			<div class="col-sm-5 hidden-xs" onmouseover="$(this).find('img').attr('src','https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/icon_phone_color.png')" onmouseout="$(this).find('img').attr('src','https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/icon_phone.png')">
+				<div class="col-sm-3 hidden-xs"><a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/contactcmhc.html"><img src="https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/icon_phone.png"  class="img-responsive" alt="contact cmhc - 512-471-3515 monday thru friday 8am-5pm" vspace="30" /></a></div>
 				<div class="col-sm-9 custom7 hidden-xs"><a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/contactcmhc.html">&nbsp;<B>512-471-3515</B><br/>&nbsp;Mon. - Fri. &nbsp;8am-5pm</a></div>
 			</div>
-			<div class="col-sm-4 hidden-xs" onmouseover="$(this).find('img').attr('src','images/universal/icon_location_color.png')" onmouseout="$(this).find('img').attr('src','images/universal/icon_location.png')">
-				<div class="col-sm-4 hidden-xs"><a class="a_class_dropdown" href="http://facilitiesservices.utexas.edu/buildings/UTM/0980"><img src="images/universal/icon_location.png"  class="img-responsive" alt="CMHC campus location" hspace="0" vspace="30" /></a></div>
+			<div class="col-sm-4 hidden-xs" onmouseover="$(this).find('img').attr('src','https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/icon_location_color.png')" onmouseout="$(this).find('img').attr('src','https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/icon_location.png')">
+				<div class="col-sm-4 hidden-xs"><a class="a_class_dropdown" href="http://facilitiesservices.utexas.edu/buildings/UTM/0980"><img src="https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/icon_location.png"  class="img-responsive" alt="CMHC campus location" hspace="0" vspace="30" /></a></div>
 				<div class="col-sm-8 custom7 hidden-xs"><a class="a_class_dropdown" href="http://facilitiesservices.utexas.edu/buildings/UTM/0980">&nbsp;Campus <br/>&nbsp;Location</a></div>
 			</div>
-			<div class="col-sm-3 hidden-xs" onmouseover="$(this).find('img').attr('src','images/universal/icon_mycmhc_color.png')" onmouseout="$(this).find('img').attr('src','images/universal/icon_mycmhc.png')">
-				<div class="col-sm-5 hidden-xs"><a class="a_class_dropdown" href="https://portal.uhs.utexas.edu/login_directory.aspx"><img src="images/universal/icon_mycmhc.png"  class="img-responsive" alt="MyCMHC" hspace="0" vspace="30" /></a></div>
+			<div class="col-sm-3 hidden-xs" onmouseover="$(this).find('img').attr('src','https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/icon_mycmhc_color.png')" onmouseout="$(this).find('img').attr('src','https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/icon_mycmhc.png')">
+				<div class="col-sm-5 hidden-xs"><a class="a_class_dropdown" href="https://portal.uhs.utexas.edu/login_directory.aspx"><img src="https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/icon_mycmhc.png"  class="img-responsive" alt="MyCMHC" hspace="0" vspace="30" /></a></div>
 				<div class="col-sm-7 custom6 hidden-xs"><a class="a_class_dropdown" href="https://portal.uhs.utexas.edu/login_directory.aspx">&nbsp;MyCMHC</a></div>
 			</div>
 		</div>
