--- a/staff.html
+++ b/staff.html
@@ -95,7 +95,7 @@
 <P><span class="bodytext">Please feel free to talk with your counselor if you have any questions about his or her background, experience, or training.
 </span></P>
 
-<P><H2 class="H2">Administrative Services Staff</H2>
+<P><H2 class="H2">Leadership Staff</H2>
 
 
 
