--- a/bethatone/include_bto_universalheader.html
+++ b/bethatone/include_bto_universalheader.html
@@ -14,20 +14,17 @@
 		</div>
 
 		<div class="col-xs-2 visible-xs" style="margin-top: 15px">
-			<img src="https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/searchicon_home.png" id="mobile-search-btn" alt="search" style="height: 26px;top: 10px;right: 20px;position: absolute;cursor:pointer" />
-		</div> 
+			<img src="images/universal/searchicon_home.png" id="mobile-search-btn" alt="search" style="height: 26px;top: 10px; right: 20px;position: absolute; cursor: pointer">
+		</div>
 
-		 <div class="cse-branding-bottom hidden-xs col-sm-4 search-container" style="margin-top: 8px">  
-			<form name="cse_searchbox" action="https://test.cmhc.utexas.edu/REDESIGN2017/search.html" method="get" id="cse_searchbox"> 
-				<input type="hidden" name="cx" value="011526861309857669012:ptgfi3yl6li" /> 
-				<input type="hidden" name="cof" value="FORID:11" />
-				<input type="text" class="search-input" name="q" placeholder="search..."> 
-				<input type="image" class="search-btn" type="submit" src="https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/searchicon.png" border="0" alt="Submit"/> 
+		<div class="cse-branding-bottom hidden-xs col-sm-4 search-container" style="margin-top:50px">
+			<form name="cse_searchbox" action="https://test.cmhc.utexas.edu/REDESIGN2017/search.html" method="get" id="cse_searchbox">
+				<input type="hidden" name="cx" value="011526861309857669012:ptgfi3yl6li">
+				<input type="hidden" name="cof" value="'FORID:11">
+				<input type="text" class="search-input" name="q" placeholder="search...">
+				<input type="image" class="search-btn" type="submit" src="https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/searchicon.png" border="0" alt="Submit">
 			</form>
-		</div> 
-
-
-
+		</div>
 	</div><!-- (this ends the container-fluid tag) -->
 
 </div><!-- (this ends the row-top-grey tag) -->
