--- a/include_universalheader.html
+++ b/include_universalheader.html
@@ -2,36 +2,30 @@
 <div class="row row-top-grey" style="width:inherit;margin:inherit;">
 	<div class="container-fluid"><!-- (this starts the container-fluid tag) -->
 		<div class="col-xs-6 col-sm-3">
-			<a href="http://www.utexas.edu/"><img src="https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/utlogo.png" class="img-responsive" alt="The University of Texas at Austin - What Starts Here Changes The World" border="0"></a>
+			<a href="http://www.utexas.edu/"><img src="images/universal/utlogo.png" class="img-responsive" alt="The University of Texas at Austin - What Starts Here Changes The World" border="0"></a>
 		</div>
-
 
 		<div class="col-xs-4 col-sm-2">
-			<a href="https://www.utexas.edu/student-affairs"><img src="https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/dsalogo.png" class="img-responsive" alt="The University of Texas at Austin Division of Student Affairs" border="0"></a>
+			<a href="https://www.utexas.edu/student-affairs"><img src="images/universal/dsalogo.png" class="img-responsive" alt="The University of Texas at Austin Division of Student Affairs" border="0"></a>
 		</div>
 
-		<div class="hidden-xs hidden-sm col-md-3" style="margin-top: 40px">&nbsp; <a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/aboutcmhc.html">About CMHC</a> <span class="orangetext">&nbsp;l&nbsp;</span> <a class="a_class_dropdown" href="contactcmhc.html">Contact</a></span>
+		<div class="hidden-xs hidden-sm col-md-3" style="margin-top: 40px">&nbsp; <a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/aboutcmhc.html">About CMHC</a> <span class="orangetext">&nbsp;l&nbsp;</span> <a class="a_class_dropdown" href="https://test.cmhc.utexas.edu/REDESIGN2017/contactcmhc.html">Contact</a></span>
 		</div>
 
 		<div class="col-xs-2 visible-xs" style="margin-top: 15px">
-			<img src="https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/hamburgericon.png" id="mobile-search-btn" alt="search" style="height: 26px;top: 10px;right: 20px;position: absolute;cursor:pointer" />
-		</div> 
+			<img src="images/universal/searchicon_home.png" id="mobile-search-btn" alt="search" style="height: 26px;top: 10px; right: 20px;position: absolute; cursor: pointer">
+		</div>
 
-		 <div class="cse-branding-bottom hidden-xs col-sm-4 search-container" style="margin-top: 8px">  
-			<form name="cse_searchbox" action="https://test.cmhc.utexas.edu/REDESIGN2017/search.html" method="get" id="cse_searchbox"> 
-				<input type="hidden" name="cx" value="011526861309857669012:ptgfi3yl6li" /> 
-				<input type="hidden" name="cof" value="FORID:11" />
-				<input type="text" class="search-input" name="q" placeholder="search..."> 
-				<input type="image" class="search-btn" type="submit" src="https://test.cmhc.utexas.edu/REDESIGN2017/images/universal/searchicon.png" border="0" alt="Submit"/> 
+		<div class="cse-branding-bottom hidden-xs col-sm-4 search-container" style="margin-top:50px">
+			<form name="cse_searchbox" action="https://test.cmhc.utexas.edu/REDESIGN2017/search.html" method="get" id="cse_searchbox">
+				<input type="hidden" name="cx" value="011526861309857669012:ptgfi3yl6li">
+				<input type="hidden" name="cof" value="'FORID:11">
+				<input type="text" class="search-input" name="q" placeholder="search...">
+				<input type="image" class="search-btn" type="submit" src="images/universal/searchicon.png" border="0" alt="Submit">
 			</form>
-
-
-		</div> 
-
-
+		</div>
 
 	</div><!-- (this ends the container-fluid tag) -->
-
 </div><!-- (this ends the row-top-grey tag) -->
 
 <div class="row row-top-grey2" id="mobile-search-container" style="display:none;height:100px;">
